--- a/css/style-2.css
+++ b/css/style-2.css
@@ -133,7 +133,10 @@ body{
   border: 1px solid rgb(226, 226, 226);
   box-shadow: 0 0 10px rgba(102,102,102,0.1);
 }
-
+.col-md-5{
+  border: 1px solid rgb(226, 226, 226);
+  box-shadow: 0 0 10px rgba(102,102,102,0.1);
+}
 #berita-heading .col-md-6{
   border: 0px solid rgb(226, 226, 226);
   box-shadow: 0 0 0px rgba(102,102,102,0.1);
